# NetCtrl

./: Cargo.toml  LICENSE  README.md  netcontrol  netcontrol_main.rs
.github/workflows/: release.yml
src/: app.rs  dialogs.rs  input.rs  main.rs  models.rs  persistence.rs  theme.rs  ui.rs
